--- a/styles/medium.css
+++ b/styles/medium.css
@@ -1,21 +1,38 @@
-@media screen and (min-width: 769px) and (max-width: 1170px) {
+@media screen and (min-width: 768px) and (max-width: 1170px) {
 
     * {
         box-sizing: border-box;
         padding: 0;
         margin: 0;
       }
+      a#scroll {
+        width: 55px;
+        height: 55px;
+        opacity: 0.8;
+        position: fixed;
+        bottom: 4%;
+        left: 85%;
+        display: none;
+        text-indent: -10000px;
+        outline: none !important;
+        background-image: url(../assets/mario.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+        z-index: 1000;
+    }
+
       .name-link-font{
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
-        color: #212d50 !important;
-        line-height: 45px !important;
-        font-size: 45px !important;
-        letter-spacing: 5px !important;
-        /* margin-top: 5% !important; */
-        /* margin-left: 15% !important; */
-        /* margin-bottom: 10% !important; */
-        cursor: pointer !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 0px !important;
+    font-size: 45px !important;
+    letter-spacing: 5px !important;
+    margin-top: 25% !important;
+    margin-left: 45% !important;
+    margin-bottom: 0% !important;
+    cursor: pointer !important;
       }
 
       .name-text {
@@ -47,20 +64,20 @@
     
       .new-menu {
         width: 100% !important;
-         height: 15% !important;
-         background-color: white !important;
-         border-bottom: 0.1em solid lightgray !important;
-         margin: 0 !important;
-         padding: 5px !important;
+    height: 15% !important;
+    background-color: white !important;
+    border-bottom: 0.1em solid lightgray !important;
+    margin: 0 !important;
+    /* padding: 5px !important; */
     }
     
        .menu-nav{
-         height: 100% !important;
-         padding: 5px !important;
-         margin: 0 !important;
-         display: grid !important; 
-         grid-template-columns: repeat(9, 1fr) !important;
-         grid-auto-rows: 50% !important; 
+        height: 100% !important;
+        /* padding: 5px !important; */
+        margin: 0 !important;
+        display: grid !important;
+        grid-template-columns: repeat(11, 1fr) !important;
+        grid-auto-rows: 50% !important;
     
          }
        
@@ -79,37 +96,37 @@
       
     
        .name{
-         height: 100% !important;
-         grid-column: 5/ 6 !important;
-         grid-row: 1 !important;
+        height: 100% !important;
+        grid-column: 2/ 3 !important;
+        grid-row: 2 !important;
          
     
        }
     
        .projects-link{
-         height: 100% !important;
-         grid-column: 3/ 4 !important;
-         grid-row: 2 !important;
+        height: 100% !important;
+        grid-column: 5 !important;
+        grid-row: 2 !important;
        }
     
        .about-contact{
-         height: 100% !important;
-         grid-column: 5/ 6 !important;
-         grid-row: 2 !important;
+        height: 100% !important;
+    grid-column: 7;
+    grid-row: 2 !important;
        }
     
        .contact{
-         height: 100% !important;
-         grid-column: 8/ 10 !important;
-         grid-row: 2 !important;
+        height: 100% !important;
+    grid-column: 9/ 10 !important;
+    grid-row: 2 !important;
         
        }
        
        .name-text{
-         color: #212d50 !important;
-         margin-left: 31% !important;
-         margin-top: 3% !important;
-         /* margin-bottom: 20%; */
+        color: #212d50 !important;
+        /* margin-left: 31% !important; */
+        /* margin-top: 15% !important; */
+        /* margin-bottom: 20%; */
       }
     
        .project-text{
@@ -117,7 +134,7 @@
         
        }
        .about-text{
-        margin: 0 0 0 40% !important;
+        margin: 0 0 0 0 !important;
         
        }
        .contact-text{
@@ -126,26 +143,26 @@
        }
        
        .projects-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        
        }
        .about-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        }
        .contact-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        }
     
        #particles-js {
@@ -253,10 +270,14 @@
       }
       
     
+
+
+     
+
       .paragraph-container{
         
         background: #F9F8F6;
-        margin-top: 180% !important;
+        margin-top: 280% !important;
         width: 100% !important;
         height: 100% !important;
         display: flex;  
@@ -312,7 +333,7 @@
         background-repeat: no-repeat !important;
         height: 400px !important;
         width: 400px !important;
-        margin-top: 10% !important;
+        margin-top: 0% !important;
         grid-column: 1 !important;
         grid-row: 2 !important;
         display: block !important;
@@ -357,33 +378,32 @@
         grid-row: 1/2;
       } */
     
-        .contact-font-last{
-      
+      .contact-font-last {
         width: 100% !important;
         height: 100% !important;
-        margin-top: 10%;
-        
-      } 
+        margin-top: 0%;
+    }
        
       .contact-container{
         display: grid !important;
-        grid-template-columns: 1fr !important;
-        grid-auto-rows: 40% !important;
-        grid-gap: 0.1rem !important;
-        /* margin-top: 380% !important; */
-        width: 93% !important;
-        height: 100% !important;
-        margin-left: 5% !important;
-        margin-right: 5% !important;
+    grid-template-columns: 1fr !important;
+    grid-auto-rows: 40% !important;
+    grid-gap: rem !important;
+    /* margin-top: 380% !important; */
+    width: 90% !important;
+    height: 100% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
       }
       
       
       
       div#map{
-       height: 400px !important;
-       width: 100% !important;
-       margin-left: 0 !important;
-       /* margin-right: 40% !important; */
+        height: 400px !important;
+        width: 100% !important;
+        margin-left: 0 !important;
+        margin-top: 0% !important;
+        /* margin-right: 40% !important; */
       
       }
       
@@ -391,7 +411,7 @@
       .contact-page{ 
         grid-column: 1 !important;
         grid-row: 2 !important;
-        margin-top: 10% !important;
+        margin-top: 15% !important;
       }
       
       #map{
