--- a/styles/lg.css
+++ b/styles/lg.css
@@ -13,7 +13,7 @@
         opacity: 0.8;
         position: fixed;
         bottom: 4%;
-        left: 94%;
+        left: 90%;
         display: none;
         text-indent: -10000px;
         outline: none !important;
@@ -26,15 +26,15 @@
 
       .name-link-font{
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
-        color: #212d50 !important;
-        line-height: 45px !important;
-        font-size: 55px !important;
-        letter-spacing: 5px !important;
-        /* margin-top: 5% !important; */
-        /* margin-left: 15% !important; */
-        /* margin-bottom: 10% !important; */
-        cursor: pointer !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 0px !important;
+    font-size: 45px !important;
+    letter-spacing: 5px !important;
+    margin-top: 25% !important;
+    margin-left: 45% !important;
+    margin-bottom: 0% !important;
+    cursor: pointer !important;
       }
 
       .name-text {
@@ -47,17 +47,16 @@
     
       .intro-font{
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
-        color: #212d50 !important;
-        font-size: 30px !important;
-        /* line-height: 45px !important; */
-        letter-spacing: 3px !important;
-      
+    font-weight: 400 !important;
+    color: #212d50 !important;
+    font-size: 30px !important;
+    /* line-height: 45px !important; */
+    letter-spacing: 3px !important;
       }
       
       .intro-paragraph-font{
-        font-family: 'Open Sans', sans-serif;
-        font-size: 25px !important;
+        font-size: 30px !important;
+        font-weight: 400 !important;
         color: #212d50 !important;
         letter-spacing: 3px !important;
         line-height: 0px !important;
@@ -66,20 +65,20 @@
     
       .new-menu {
         width: 100% !important;
-         height: 15% !important;
-         background-color: white !important;
-         border-bottom: 0.1em solid lightgray !important;
-         margin: 0 !important;
-         padding: 5px !important;
+    height: 15% !important;
+    background-color: white !important;
+    border-bottom: 0.1em solid lightgray !important;
+    margin: 0 !important;
+    /* padding: 5px !important; */
     }
     
        .menu-nav{
-         height: 100% !important;
-         padding: 5px !important;
-         margin: 0 !important;
-         display: grid !important; 
-         grid-template-columns: repeat(9, 1fr) !important;
-         grid-auto-rows: 50% !important; 
+        height: 100% !important;
+        /* padding: 5px !important; */
+        margin: 0 !important;
+        display: grid !important;
+        grid-template-columns: repeat(11, 1fr) !important;
+        grid-auto-rows: 50% !important;
     
          }
        
@@ -98,37 +97,37 @@
       
     
        .name{
-         height: 100% !important;
-         grid-column: 1/ 3 !important;
-         grid-row: 1/ 2 !important;
+        height: 100% !important;
+        grid-column: 2/ 3 !important;
+        grid-row: 2 !important;
          
     
        }
     
        .projects-link{
-         height: 100% !important;
-         grid-column: 6/ 7 !important;
-         grid-row: 2 !important;
+        height: 100% !important;
+        grid-column: 5 !important;
+        grid-row: 2 !important;
        }
     
        .about-contact{
-         height: 100% !important;
-         grid-column: 7/ 8 !important;
-         grid-row: 2 !important;
+        height: 100% !important;
+    grid-column: 7;
+    grid-row: 2 !important;
        }
     
        .contact{
-         height: 100% !important;
-         grid-column: 8/ 10 !important;
-         grid-row: 2 !important;
+        height: 100% !important;
+    grid-column: 9/ 10 !important;
+    grid-row: 2 !important;
         
        }
        
        .name-text{
-         color: #212d50 !important;
-         margin-left: 31% !important;
-         margin-top: 15% !important;
-         /* margin-bottom: 20%; */
+        color: #212d50 !important;
+        /* margin-left: 31% !important; */
+        /* margin-top: 15% !important; */
+        /* margin-bottom: 20%; */
       }
     
        .project-text{
@@ -136,7 +135,7 @@
         
        }
        .about-text{
-        margin: 0 0 0 10% !important;
+        margin: 0 0 0 0 !important;
         
        }
        .contact-text{
@@ -145,26 +144,26 @@
        }
        
        .projects-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        
        }
        .about-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        }
        .contact-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        }
     
        #particles-js {
@@ -187,16 +186,14 @@
       
       div.intro{
         width: 100% !important;
-        height: 30% !important;
-        margin-top: 40% !important;
-        margin-left: 5% !important;
-        position: absolute !important;
-        color: rgb(66, 66, 66) !important;
-        font-size: 45px !important; */
-        line-height: 45px !important;
-        font-weight: 400 !important;
-        
-        letter-spacing: 0px !important;
+    height: 30% !important;
+    margin-top: 40% !important;
+    margin-left: 5% !important;
+    position: absolute !important;
+    color: rgb(66, 66, 66) !important;
+    font-size: 45px !important;
+    font-weight: 400 !important;
+    letter-spacing: 0px !important;
       } 
     
       .portfolio{
