--- a/styles/medium.css
+++ b/styles/medium.css
@@ -45,7 +45,7 @@
     
       .intro-font{
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
+        font-weight: 400 !important;
         color: #212d50 !important;
         font-size: 30px !important;
         /* line-height: 45px !important; */
@@ -55,7 +55,8 @@
       
       .intro-paragraph-font{
         font-family: 'Open Sans', sans-serif;
-        font-size: 25px !important;
+        font-weight: 400 !important;
+        font-size: 28px !important;
         color: #212d50 !important;
         letter-spacing: 3px !important;
         line-height: 0px !important;
@@ -187,7 +188,7 @@
       div.intro{
         width: 100% !important;
         height: 30% !important;
-        margin-top: 50% !important;
+        margin-top: 40% !important;
         margin-left: 5% !important;
         position: absolute !important;
         color: rgb(66, 66, 66) !important;
