--- a/styles/pad.css
+++ b/styles/pad.css
@@ -4,17 +4,43 @@
         padding: 0;
         margin: 0;
       }
+      a#scroll {
+        width: 55px;
+        height: 55px;
+        opacity: 0.8;
+        position: fixed;
+        bottom: 4%;
+        left: 90%;
+        display: none;
+        text-indent: -10000px;
+        outline: none !important;
+        background-image: url(../assets/mario.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+        z-index: 1000;
+    }
+
       .name-link-font{
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
-        color: #212d50 !important;
-        line-height: 40px !important;
-        font-size: 30px !important;
-        letter-spacing: 5px !important;
-        margin-top: 10% !important;
-        margin-left: 15% !important;
-        cursor: pointer !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    line-height: 0px !important;
+    font-size: 45px !important;
+    letter-spacing: 5px !important;
+    margin-top: 25% !important;
+    margin-left: 45% !important;
+    margin-bottom: 0% !important;
+    cursor: pointer !important;
       }
+
+      .name-text {
+        color: #212d50 !important;
+         margin-left: 41% !important;
+        margin-top: 1% !important;
+
+        
+    }
     
       .intro-font{
         font-family: 'Montserrat', sans-serif !important;
@@ -37,20 +63,20 @@
     
       .new-menu {
         width: 100% !important;
-         height: 15% !important;
-         background-color: white !important;
-         border-bottom: 0.1em solid lightgray !important;
-         margin: 0 !important;
-         padding: 5px !important;
+    height: 15% !important;
+    background-color: white !important;
+    border-bottom: 0.1em solid lightgray !important;
+    margin: 0 !important;
+    /* padding: 5px !important; */
     }
     
        .menu-nav{
-         height: 100% !important;
-         padding: 5px !important;
-         margin: 0 !important;
-         display: grid !important; 
-         grid-template-columns: repeat(9, 1fr) !important;
-         grid-auto-rows: 50% !important; 
+        height: 100% !important;
+        /* padding: 5px !important; */
+        margin: 0 !important;
+        display: grid !important;
+        grid-template-columns: repeat(11, 1fr) !important;
+        grid-auto-rows: 50% !important;
     
          }
        
@@ -69,33 +95,37 @@
       
     
        .name{
-         height: 100% !important;
-         grid-column: 1/ 10 !important;
-         grid-row: 1 !important;
+        height: 100% !important;
+        grid-column: 2/ 3 !important;
+        grid-row: 2 !important;
+         
     
        }
     
        .projects-link{
-         height: 100% !important;
-         grid-column: 2/ 3 !important;
+        height: 100% !important;
+        grid-column: 5 !important;
+        grid-row: 2 !important;
        }
     
        .about-contact{
-         height: 100% !important;
-         grid-column: 4/ 5 !important;
+        height: 100% !important;
+    grid-column: 7;
+    grid-row: 2 !important;
        }
     
        .contact{
-         height: 100% !important;
-         grid-column: 7/ 10 !important;
+        height: 100% !important;
+    grid-column: 9/ 10 !important;
+    grid-row: 2 !important;
         
        }
        
        .name-text{
-         color: #212d50 !important;
-         margin-left: 31% !important;
-         margin-top: 3% !important;
-         /* margin-bottom: 20%; */
+        color: #212d50 !important;
+        /* margin-left: 31% !important; */
+        /* margin-top: 15% !important; */
+        /* margin-bottom: 20%; */
       }
     
        .project-text{
@@ -103,7 +133,7 @@
         
        }
        .about-text{
-        margin: 0 0 0 50% !important;
+        margin: 0 0 0 0 !important;
         
        }
        .contact-text{
@@ -112,26 +142,26 @@
        }
        
        .projects-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        
        }
        .about-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        }
        .contact-font{
-         line-height: 40px;
-         font-size: 18px;
-         font-weight: 400 bold !important;
-         cursor: pointer;
-         letter-spacing: 3px;
+        line-height: 0px;
+        font-size: 14px;
+        font-weight: 400 bold !important;
+        cursor: pointer;
+        letter-spacing: 3px;
        }
     
        #particles-js {
