--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -6,6 +6,22 @@
     padding: 0;
     margin: 0;
   }
+  a#scroll {
+    width: 45px;
+    height: 45px;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 4%;
+    left: 80%;
+    display: none;
+    text-indent: -10000px;
+    outline: none !important;
+    background-image: url(../assets/mario.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+    z-index: 1000;
+}
   .name-link-font {
     font-family: 'Montserrat', sans-serif !important;
     font-weight: 400 !important;
