--- a/styles/lg.css
+++ b/styles/lg.css
@@ -1,31 +1,31 @@
 
 @media screen and (min-width: 1171px) {
 
-    * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 
-      a#scroll {
-        width: 55px;
-        height: 55px;
-        opacity: 0.8;
-        position: fixed;
-        bottom: 4%;
-        left: 90%;
-        display: none;
-        text-indent: -10000px;
-        outline: none !important;
-        background-image: url(../assets/mario.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        
-        z-index: 1000;
-    }
+a#scroll {
+    width: 55px;
+    height: 55px;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 4%;
+    left: 93%;
+    display: none;
+    text-indent: -10000px;
+    outline: none !important;
+    background-image: url(../assets/mario.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 
-      .name-link-font{
-        font-family: 'Montserrat', sans-serif !important;
+    z-index: 1000;
+}
+
+.name-link-font{
+    font-family: 'Montserrat', sans-serif !important;
     font-weight: 400 bold !important;
     color: #212d50 !important;
     line-height: 0px !important;
@@ -35,157 +35,203 @@
     margin-left: 45% !important;
     margin-bottom: 0% !important;
     cursor: pointer !important;
-      }
+}
 
-      .name-text {
-        color: #212d50 !important;
-         margin-left: 41% !important;
-        margin-top: 1% !important;
+.name-text {
+    color: #212d50 !important;
+    margin-left: 41% !important;
+    margin-top: 1% !important;
 
-        
-    }
     
-      .intro-font{
-        font-family: 'Montserrat', sans-serif !important;
+}
+    
+.intro-font{
+    font-family: 'Montserrat', sans-serif !important;
     font-weight: 400 !important;
     color: #212d50 !important;
     font-size: 30px !important;
     /* line-height: 45px !important; */
     letter-spacing: 3px !important;
-      }
+}
       
-      .intro-paragraph-font{
-        font-size: 30px !important;
-        font-weight: 400 !important;
-        color: #212d50 !important;
-        letter-spacing: 3px !important;
-        line-height: 0px !important;
-      }
+.intro-paragraph-font{
+    font-size: 30px !important;
+    font-weight: 400 !important;
+    color: #212d50 !important;
+    letter-spacing: 3px !important;
+    line-height: 0px !important;
+}
+
     
-    
-      .new-menu {
-        width: 100% !important;
+.new-menu {
+    width: 100% !important;
     height: 15% !important;
     background-color: white !important;
     border-bottom: 0.1em solid lightgray !important;
     margin: 0 !important;
     /* padding: 5px !important; */
-    }
+}
     
-       .menu-nav{
-        height: 100% !important;
-        /* padding: 5px !important; */
-        margin: 0 !important;
-        display: grid !important;
-        grid-template-columns: repeat(11, 1fr) !important;
-        grid-auto-rows: 50% !important;
+.menu-nav{
+    height: 100% !important;
+    /* padding: 5px !important; */
+    margin: 0 !important;
+    display: grid !important;
+    grid-template-columns: repeat(11, 1fr) !important;
+    grid-auto-rows: 50% !important;
+
+}
+       
+       
+ul{
+    width: 100% !important;
     
-         }
-       
-       
-       ul{
-         width: 100% !important;
-         
-         color: #212d50 !important;
-       }
-       
-       ul, li {
-         list-style-type: none !important;
-         
-       }
+    color: #212d50 !important;
+}
+
+ul, li {
+    list-style-type: none !important;
+    
+}
        
       
     
-       .name{
-        height: 100% !important;
-        grid-column: 2/ 3 !important;
-        grid-row: 2 !important;
-         
-    
-       }
-    
-       .projects-link{
-        height: 100% !important;
-        grid-column: 5 !important;
-        grid-row: 2 !important;
-       }
-    
-       .about-contact{
-        height: 100% !important;
-    grid-column: 7;
+.name{
+    height: 100% !important;
+    grid-column: 2/ 3 !important;
     grid-row: 2 !important;
-       }
-    
-       .contact{
-        height: 100% !important;
-    grid-column: 9/ 10 !important;
+
+
+}
+
+.projects-link{
+    height: 100% !important;
+    grid-column: 8 !important;
     grid-row: 2 !important;
-        
-       }
-       
-       .name-text{
-        color: #212d50 !important;
-        /* margin-left: 31% !important; */
-        /* margin-top: 15% !important; */
-        /* margin-bottom: 20%; */
-      }
+}
+
+.about-contact{
+    height: 100% !important;
+    grid-column: 9;
+    grid-row: 2 !important;
+}
+
+.contact{
+    height: 100% !important;
+    grid-column: 10/ 11 !important;
+    grid-row: 2 !important;
+
+}
+
+.name-text{
+    color: #212d50 !important;
+    /* margin-left: 31% !important; */
+    /* margin-top: 15% !important; */
+    /* margin-bottom: 20%; */
+}
+
+.project-text{
+    margin: 0 0 0 0 !important;
+
+}
+.about-text{
+    margin: 0 0 0 0 !important;
+
+}
+.contact-text{
+    margin: 0 0 0 0 !important;
+
+}
+
+.projects-font{
+    line-height: 0px;
+    font-size: 14px;
+    font-weight: 400 bold !important;
+    cursor: pointer;
+    letter-spacing: 3px;
+
+}
+.about-font{
+    line-height: 0px;
+    font-size: 14px;
+    font-weight: 400 bold !important;
+    cursor: pointer;
+    letter-spacing: 3px;
+}
+.contact-font{
+    line-height: 0px;
+    font-size: 14px;
+    font-weight: 400 bold !important;
+    cursor: pointer;
+    letter-spacing: 3px;
+}
+
+#particles-js {
+    /* background: rgb(37, 40, 52); */
+    /* background: rgb(242, 240, 236); */
+    /* background: #F5F4F1; */
+    background: #F9F8F6;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+
+}
+
+.container{
+    position: absolute;
+    width: 100%;
+
+}
+
+/* ICON BAR */
+
+.icon-bar {
+    position: fixed;
+    top: 50%;
+    left: 5px;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.media{
+    height: 100% !important;
+    grid-column: 11/ 12 !important;
+    grid-row: 2 !important;
+}
+
+
+.media a {
+    height: 100%;
+    display: inline-block;
+    text-align: center;
+    padding: 0 20px 0px 0px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+}
+
+/* Style the icon bar links */
+.icon-bar a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 30px;
     
-       .project-text{
-        margin: 0 0 0 0 !important;
-        
-       }
-       .about-text{
-        margin: 0 0 0 0 !important;
-        
-       }
-       .contact-text{
-        margin: 0 0 0 0 !important;
-        
-       }
-       
-       .projects-font{
-        line-height: 0px;
-        font-size: 14px;
-        font-weight: 400 bold !important;
-        cursor: pointer;
-        letter-spacing: 3px;
-       
-       }
-       .about-font{
-        line-height: 0px;
-        font-size: 14px;
-        font-weight: 400 bold !important;
-        cursor: pointer;
-        letter-spacing: 3px;
-       }
-       .contact-font{
-        line-height: 0px;
-        font-size: 14px;
-        font-weight: 400 bold !important;
-        cursor: pointer;
-        letter-spacing: 3px;
-       }
-    
-       #particles-js {
-        /* background: rgb(37, 40, 52); */
-        /* background: rgb(242, 240, 236); */
-        /* background: #F5F4F1; */
-        background: #F9F8F6;
-        overflow: hidden;
-        height: 100%;
-        width: 100%;
-        margin: 0;
-      
-      }
-      
-      .container{
-        position: absolute;
-        width: 100%;
-        
-      }
-      
-      div.intro{
-        width: 100% !important;
+}
+
+.icon-bar a:hover {
+    background-color: lightgrey;
+}
+
+
+/* END ICON BAR */
+
+div.intro{
+    width: 100% !important;
     height: 30% !important;
     margin-top: 35% !important;
     margin-left: 5% !important;
@@ -194,10 +240,10 @@
     font-size: 45px !important;
     font-weight: 400 !important;
     letter-spacing: 0px !important;
-      } 
-    
-      .portfolio{
-        display: grid !important;
+} 
+
+.portfolio{
+    display: grid !important;
     grid-template-columns: repeat(11, 1fr) !important;
     grid-auto-rows: 30% !important;
     /* grid-template-rows: repeat(5, 1fr); */
@@ -207,91 +253,91 @@
     height: 100% !important;
     margin-left: 5% !important;
     margin-right: 5% !important;
-        
-      }
 
-      .portfolio-container{
-        /* margin-top: 5%; */
-        height: 100%;
-        width: 100%;
-       
-      }
-    
-      
-      .portfolio-heading {
-        display: flex !important;
-        margin-top: 5% !important;
+}
+
+.portfolio-container{
+    /* margin-top: 5%; */
+    height: 100%;
+    width: 100%;
+
+}
+
+
+.portfolio-heading {
+    display: flex !important;
+    margin-top: 5% !important;
     flex-direction: column !important;
     align-items: center !important;
     grid-column: 3 / 10 !important;
     grid-row: 1/3;
     width: 100%;
     height: 100%;
-    }
-    .portfolio-heading-blurb{
-          /* margin-left: 10% !important; */
-          text-align: justify !important;
-          font-family: 'Open Sans', sans-serif !important;
-          font-size: 14px !important;
-          width: 70%;
-          margin-top: 5%;
-          margin-left: 10%;
-    }
-    .portfolio-heading-text {
-      font-family: 'Montserrat', sans-serif !important;
-      font-weight: 400 bold !important;
-      color: #212d50 !important;
-      font-size: 25px !important;
-      /* line-height: 45px; */
-      letter-spacing: 0px !important;
-    }
-    
-      .box-1 {
-        height: 100%;
-        grid-column: 2 / 5 !important;
+}
+.portfolio-heading-blurb{
+    /* margin-left: 10% !important; */
+    text-align: justify !important;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 14px !important;
+    width: 70%;
+    margin-top: 5%;
+    margin-left: 10%;
+}
+.portfolio-heading-text {
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    font-size: 25px !important;
+    /* line-height: 45px; */
+    letter-spacing: 0px !important;
+}
+
+.box-1 {
+    height: 100%;
+    grid-column: 2 / 5 !important;
     grid-row: 2 / 4 !important;
-      }
-    
-      
-    
-      .box-2{
-        grid-column: 5 / 8 !important;
+}
+
+
+
+.box-2{
+    grid-column: 5 / 8 !important;
     grid-row: 2 !important;
-      }
-      .box-3{
-        grid-column: 5 / 8 !important;
+}
+.box-3{
+    grid-column: 5 / 8 !important;
     grid-row: 3 !important;
-      }
-      .box-4{
-        grid-column: 8 / 11 !important;
+}
+.box-4{
+    grid-column: 8 / 11 !important;
     grid-row: 2 !important;
-      }
-      .box-5{
-        grid-column: 8 / 11 !important;
+}
+.box-5{
+    grid-column: 8 / 11 !important;
     grid-row: 3 !important;
-      }
-      /* .box-6{
-        grid-column: 1 !important;
-        grid-row: 7 !important;
-      } */
-      
-    
-      .paragraph-container{
-        
-        background: #F9F8F6;
-        margin-top: 10% !important;
-        width: 100% !important;
-        height: 100% !important;
-        display: flex;  
-        
-        align-items: center;
-        
-      }
-      
-      
-      .paragraph{
-        display: grid;
-        grid-template-columns: repeat(11, 1fr) !important;
+}
+/* .box-6{
+grid-column: 1 !important;
+grid-row: 7 !important;
+} */
+
+
+.paragraph-container{
+
+    background: #F9F8F6;
+    margin-top: 10% !important;
+    width: 100% !important;
+    height: 100% !important;
+    display: flex;  
+
+    align-items: center;
+
+}
+
+
+.paragraph{
+    display: grid;
+    grid-template-columns: repeat(11, 1fr) !important;
     grid-auto-rows: 30% !important;
     grid-gap: 1rem !important;
     margin-top: 0% !important;
@@ -301,38 +347,38 @@
     height: 100% !important;
     /* margin-bottom: 20% !important; */
     /* position: absolute; */
-      
-      }
-      .about-blurb{
-        grid-column: 2 / 7 !important;
+
+}
+.about-blurb{
+    grid-column: 2 / 7 !important;
     grid-row: 2 / 3 !important;
     width: 100% !important;
     /* margin-left: 5%; */
     /* margin-top: 10%; */
     display: flex;
     flex-direction: column;
-        
-      }
-      .about-blurb-tittle {
-        margin-bottom: 5% !important;
-        font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
-        color: #212d50 !important;
-        font-size: 35px !important;
-        /* line-height: 45px; */
-        letter-spacing: 3px !important;
-    }
-    
-    .about-blurb-text {
-      font-family: 'Open Sans', sans-serif !important;
-      font-size: 14px !important;
-      color: #43454B !important;
-    }
-      
-      
-      .about-picture {
-        background-image: url(../assets/jhedi2_40\ 3.jpg);
-        background-size: contain !important;
+
+}
+.about-blurb-tittle {
+    margin-bottom: 5% !important;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    font-size: 35px !important;
+    /* line-height: 45px; */
+    letter-spacing: 3px !important;
+}
+
+.about-blurb-text {
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 14px !important;
+    color: #43454B !important;
+}
+
+
+.about-picture {
+    background-image: url(../assets/jhedi2_40\ 3.jpg);
+    background-size: contain !important;
     background-repeat: no-repeat !important;
     height: 350px !important;
     width: 400px !important;
@@ -340,36 +386,36 @@
     grid-column: 8 / 10 !important;
     grid-row: 2 / 4 !important;
     display: block !important;
-    }
-    
-     .second-about-blurb{
-        /* display:  !important; */
-        grid-column: 1 !important;
-        grid-row: 3 !important;
-        margin-top: 10%;
-        margin-left: 0;
-      }
-      
-      .second-about-img{
-        /* display:  !important; */
-        background-image: url("../assets/IMG_2635.jpg");
-        background-size: cover;
-        grid-column: 1 !important;
-        grid-row: 3 !important;
-        margin-top: 30%;
-      }
-      
-    
-        .contact-font-last{
-      
-            width: 100% !important;
-            height: 100% !important;
-            margin-top: 0%;
-        
-      } 
-       
-      .contact-container{
-        display: grid !important;
+}
+
+.second-about-blurb{
+    /* display:  !important; */
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 10%;
+    margin-left: 0;
+}
+
+.second-about-img{
+    /* display:  !important; */
+    background-image: url("../assets/IMG_2635.jpg");
+    background-size: cover;
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 30%;
+}
+
+
+.contact-font-last{
+
+    width: 100% !important;
+    height: 100% !important;
+    margin-top: 0%;
+
+} 
+
+.contact-container{
+    display: grid !important;
     grid-template-columns: repeat(11, 1fr) !important;
     grid-auto-rows: 30% !important;
     grid-gap: 1rem !important;
@@ -378,77 +424,77 @@
     height: 100% !important;
     margin-left: 5% !important;
     margin-right: 5% !important;
-      }
-      
-      
-      
-      div#map{
-        height: 400px !important;
-        width: 100% !important;
-        /* margin-left: 0 !important; */
-        grid-column: 2 / 11 !important;
-        grid-row: 1 / 3 !important;
-        /* margin-right: 40% !important; */
-      
-      }
-      
-      
-      .contact-page{ 
-        grid-column: 2 / 5 !important;
+}
+
+
+
+div#map{
+    height: 400px !important;
+    width: 100% !important;
+    /* margin-left: 0 !important; */
+    grid-column: 2 / 11 !important;
+    grid-row: 1 / 3 !important;
+    /* margin-right: 40% !important; */
+
+}
+
+
+.contact-page{ 
+    grid-column: 2 / 5 !important;
     grid-row: 3 !important;
     margin-top: 20% !important;
-      }
-      
-      /* #map{ */
-        /* grid-column: 1 !important; */
-        /* grid-row: 1 !important; */
-        /* height: 150px !important; */
-       
-        /* margin-right: 30% !important; */
-      /* } */
-      
-      .contact-form{
-        grid-column: 3 / 6;
-        grid-row: 3/4;
-      
-      }
-      .contact-page-text {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400 bold !important;
-        color: #212d50 !important;
-        font-size: 35px !important;
-        /* line-height: 45px; */
-        letter-spacing: 3px !;
-        
-    }
-    .contact-page-text-email  {
-      font-family: 'Open Sans', sans-serif;
-      font-size: 14px !important;
-      color: #43454B;
-    }
-    .email{
-      font-family: 'Open Sans', sans-serif;
-      font-size: 14px !important;
-      color: #43454B;
-    }
-    
-      div.footer {
-        display: flex !important;
-        flex-direction: row !important;
-        justify-content: center !important;
-        align-items: center !important;
-        bottom: 0 !important;
-        border-top: 1px solid lightgray !important;
-        margin-top: 30% !important;
-        height: 5% !important; 
-        width: 100% !important;
-    }
-    .footer-text {
-      font-family: 'Open Sans', sans-serif;
-      font-size: 14px !important;
-      color: #43454B !important;
-      padding-top: 3% !important;
-      margin-bottom: 2% !important;
-    }
-  
+}
+
+/* #map{ */
+/* grid-column: 1 !important; */
+/* grid-row: 1 !important; */
+/* height: 150px !important; */
+
+/* margin-right: 30% !important; */
+/* } */
+
+.contact-form{
+    grid-column: 3 / 6;
+    grid-row: 3/4;
+
+}
+.contact-page-text {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400 bold !important;
+    color: #212d50 !important;
+    font-size: 35px !important;
+    /* line-height: 45px; */
+    letter-spacing: 3px !;
+
+}
+.contact-page-text-email  {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px !important;
+    color: #43454B;
+}
+.email{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px !important;
+    color: #43454B;
+}
+
+div.footer {
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: center !important;
+    align-items: center !important;
+    bottom: 0 !important;
+    border-top: 1px solid lightgray !important;
+    margin-top: 30% !important;
+    height: 5% !important; 
+    width: 100% !important;
+}
+.footer-text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px !important;
+    color: #43454B !important;
+    padding-top: 3% !important;
+    margin-bottom: 2% !important;
+}
+
 }
